--- a/styleindia.css
+++ b/styleindia.css
@@ -117,7 +117,7 @@ p.contentdescription{
 .content:hover{
   background: rgba(78, 34, 0, 0.9);
 }
-ul,table{
+ul{
   margin: 3%;
   color: #4e2200;
 }
@@ -189,7 +189,7 @@ p.card-text{
 /*styling to make site responsive and look good on small screens*/
 @media only screen and (max-width: 600px) {
   h1.contenthead{
-    font-size: 50px;
+    font-size: 40px;
   }
   p.contentdescription{
     font-size: 15px;
@@ -200,9 +200,18 @@ p.card-text{
   .container{
     margin: 5% auto;
   }
+  h1.articlehead{
+    font-size: 35px;
+    margin: 3%;
+  }
+  p.article{
+    font-size: 20px;
+    margin: 3%;
+  }
   #endquote{
-    font-size: 60px;
+    font-size: 50px;
     text-shadow: 2px 2px 5px #4e2200;
+    font-weight: 700;
   }
   h1.card-title{
     font-size: 35px;
