--- a/styleindia.css
+++ b/styleindia.css
@@ -44,7 +44,7 @@ body{
   position: fixed;
   bottom: 20px;
   right: 30px;
-  z-index: 99;
+  z-index: 50;
   width:60px;
   height: 60px;
   font-size: 30px;
@@ -127,7 +127,7 @@ ul{
   background-color: #fdf3e8;
   box-shadow: 8px 8px 16px rgba(78, 34, 0, 0.7),-9px -9px 16px rgba(253, 243, 232, 0.7);
   display: none;
-  z-index: 5;
+  z-index: 100;
   top:0;
   left:0;
   bottom: 0;
@@ -186,6 +186,47 @@ p.card-text{
   text-shadow: 5px 5px 10px #4e2200;
   color: #4e2200;
 }
+/*styling about section*/
+#about{
+  background-color: #4e2200;
+  padding: 3%;
+  color: #fdf3e8;
+  text-align: center;
+}
+.aboutcard{
+  border-radius: 55px;
+  background-color: #4e2200;
+  box-shadow: 20px 20px 60px #421d00,
+             -20px -20px 60px #5a2700;
+  margin: 5%;
+  padding: 2%;
+}
+.imgabout{
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+  margin: 3%;
+}
+.aboutlink{
+  color: #fdf3e8;
+  font-size: 50px;
+  margin: 3%;
+}
+.aboutlink:hover{
+  color: white;
+  font-size: 60px;
+  transition: 0.2s;
+}
+.contact{
+  border-radius: 40px;
+  background-color: #4e2200;
+  box-shadow: 20px 20px 60px #421d00,
+             -20px -20px 60px #5a2700;
+  margin: 3%;
+  padding: 2%;
+  display: flex;
+  justify-content: space-around;
+}
 /*styling to make site responsive and look good on small screens*/
 @media only screen and (max-width: 600px) {
   h1.contenthead{
@@ -201,11 +242,11 @@ p.card-text{
     margin: 5% auto;
   }
   h1.articlehead{
-    font-size: 35px;
+    font-size: 30px;
     margin: 3%;
   }
   p.article{
-    font-size: 20px;
+    font-size: 15px;
     margin: 3%;
   }
   #endquote{
@@ -218,5 +259,17 @@ p.card-text{
   }
   p.card-text{
     font-size: 12px;
+  }
+  #about .row h1{
+    font-size: 35px;
+  }
+  #about .row p{
+    font-size: 15px;
+  }
+  .aboutlink{
+    font-size: 30px;
+  }
+  .aboutlink:hover{
+    font-size: 35px;
   }
 }
